--- a/senha.html
+++ b/senha.html
@@ -16,8 +16,8 @@
             
             <div> <button type="button" class="btn"> Enviar!</button> </div>
            
-            <div> Ainda não tem uma conta?<a href="cadastro.html">Ciar conta</a></div>
-            <div>Já tem uma conta?<a href="login.html">Fazer login</a></div>
+            <div> Ainda não tem uma conta?<a href="cadastro.html">Criar conta</a></div>
+            <div>Já tem uma conta?<a href="index.html">Fazer login</a></div>
         </div>
 </body>
 </html>
