--- a/cadastro.html
+++ b/cadastro.html
@@ -41,7 +41,7 @@
         <input type="password"> <br>
        <div class="cpf">Confirme sua senha<span class="obrigatorio">*</span>: <br> <input type="password" name="" id=""></div>
         <button class="btn">Criar cadastro</button>
-        <div class="cpf">Já tem uma conta?<a href="login.html">Fazer login</a></div>
+        <div class="cpf">Já tem uma conta?<a href="index.html">Fazer login</a></div>
       </div>
         
 </body>
