--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <h1> Fazer login </h1>
             <p>Faça o login utilizando E-mail e Senha!</p>
             Login: <input type="email" name="email" id="mail" placeholder="E-mail ou telefone" required> <br>
-            Senha: <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required> <br>
+            <div>
+                Senha: <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+            </div>
             <button class="btn">Fazer login</button>
              <div><a href="senha.html">Esqueceu sua senha?</a></div>   
             <p>Ainda não possui uma conta? <a href="cadastro.html">Criar conta</a></p>
