--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Faça o login utilizando E-mail e Senha!</p>
             Login: <input type="email" name="email" id="mail" placeholder="E-mail ou telefone" required> <br>
             <div>
-                Senha: <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+                Senha: <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required maxlength="20">
             </div>
             <button class="btn">Fazer login</button>
              <div><a href="senha.html">Esqueceu sua senha?</a></div>   
