--- a/cadastro.html
+++ b/cadastro.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar cadastro</title>
     <link rel="stylesheet" href="cadastro.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="jquery.mask.js"></script>
+    <script src="cadastro.js"></script>
 </head>
 <body>
         <div class="cadastro">
@@ -26,13 +29,18 @@
             <div class="cpf">
               CPF<span class="obrigatorio">*</span>: <br>
               <span class="info">necessário pra emissão das Notas Fiscais</span> <br>
-              <input type="number" name="" id="">
+              <input type="text" name="cpf" class="cpff" maxlength="11">
+      </div>
+
+      <div class="cpf">
+        Data de Nascimento <span class="obrigatorio">*</span>: <br> 
+        <input type="text" class="data">
       </div>
      
       <div class="cpf">
         Telefone<span class="obrigatorio">*</span>: <br>
           <span class="info">Caso a gente precise entrar em contato com você</span> <br>
-          <input type="tel" name="telefone" maxlength="11"> <br>
+          <input type="tel" name="telefone" maxlength="11" class="tel"> <br>
       </div> 
       
       <div class="cpf">
