--- a/cadastro.html
+++ b/cadastro.html
@@ -48,7 +48,7 @@
       <span class="info">Crie uma senha que tenha entre 6 e 20 caracteres</span> <br>
         <input type="password" maxlength="20"> <br>
        <div class="cpf">Confirme sua senha<span class="obrigatorio">*</span>: <br> <input type="password" maxlength="20"></div>
-        <button class="btn">Criar cadastro</button>
+        <button class="btn" onclick="clicar()" id="clique">Criar cadastro</button>
         <div class="cpf">Já tem uma conta?<a href="index.html">Fazer login</a></div>
       </div>
         
