--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
     <link rel="stylesheet" href="login.css">
+    <script src="index.js"></script>
 </head>
 <body>
         <div class="login">
@@ -16,7 +17,7 @@
             <div>
                 Senha: <input type="password" name="senha" id="senha" placeholder="Digite sua senha" required maxlength="20">
             </div>
-            <button class="btn">Fazer login</button>
+            <button class="btn" onclick="clicar()" id="clique">Fazer login</button>
              <div><a href="senha.html">Esqueceu sua senha?</a></div>   
             <p>Ainda não possui uma conta? <a href="cadastro.html">Criar conta</a></p>
         
